# NCU_TOM

./: .env.example  .env.local  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.local.yml  docker-compose.prod.yml  package-lock.json  package.json
backend/: .dockerignore  .env.local  Dockerfile  Dockerfile.local  Makefile  TESTING.md  conftest.py  manage.py  pyproject.toml  pytest.ini  requirements.txt  test_settings.py
backend/dataproducts/: apps.py  models.py  serializers.py  urls.py  views.py
backend/dataproducts/migrations/: 0001_initial.py  0002_initial.py  0003_remove_lulindataproduct_instrument_mag_and_more.py  0004_alter_lulindataproduct_file_name.py  0005_etllogs.py  0006_alter_lulindataproduct_target.py
backend/helpers/: authentication.py  email.py  mail.py  managers.py  models.py  paginator.py  serializers.py  tests.py  urls.py  views.py
backend/helpers/management/commands/: create_local_superuser.py  import_csv_data.py  insert_data_from_csv.py  pair_data_target.py
backend/helpers/migrations/: 0001_initial.py  0002_alter_comments_table_alter_tags_table.py  0002_alter_comments_user.py  0002_alter_user_role.py  0002_alter_users_is_active_alter_users_role.py  0002_initial.py  0002_users_use_demo_targets.py  0003_announcements_deleted_at.py  0003_comments_deleted_at_alter_announcement_deleted_at.py  0003_remove_users_title_alter_users_role.py  0004_alter_users_options_users_deleted_at.py  0004_requestlog.py
backend/observations/: apps.py  code_generators.py  filters.py  lulin.py  lulin_code_generator.py  lulin_models.py  models.py  observatory_config.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/observations/migrations/: 0001_initial.py  0002_alter_observation_table.py  0002_initial.py  0002_observation_deleted_at.py  0003_alter_lulin_priority_alter_observation_user.py  0004_alter_observation_deleted_at.py
backend/system/: adapter.py  adapters.py  authentication.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/system/migrations/: 0001_initial.py
backend/targets/: apps.py  filters.py  models.py  query_service.py  serializers.py  signals.py  simbad.py  tests.py  urls.py  views.py  visibility.py  vizier.py
backend/targets/migrations/: 0001_initial.py  0002_alter_target_dec_alter_target_notes_alter_target_ra.py  0002_alter_target_dec_alter_target_ra_and_more.py  0002_alter_target_deleted_at.py  0002_alter_target_table.py  0002_target_deleted_at.py  0003_target_hashed_sed_target_hashed_simbad_target_sed_and_more.py  0003_target_unique_target_name_per_user.py  0004_alter_target_user.py
backend/templates/email/: observation.html  password_reset.html
backend/tests/: __init__.py  conftest.py  test_dataproducts.py  test_example.py  test_helpers.py  test_observations.py  test_system.py  test_targets.py
backend/tom/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
frontend/: .dockerignore  .env.local  (+13 more)
(+424 files in other folders)
