[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astropy>=7.2.0",
    "astroquery==0.4.6",
    "cryptography>=46.0.3",
    "dj-rest-auth==5.0.1",
    "django==5.1.3",
    "django-allauth==65.2.0",
    "django-cors-headers==4.3.0",
    "django-filter>=25.1",
    "django-templated-mail==1.1.1",
    "djangorestframework==3.14.0",
    "djangorestframework-simplejwt==5.5.1",
    "drf-spectacular==0.27.1",
    "gunicorn==21.2.0",
    "html5lib==1.1",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "psycopg[binary,pool]>=3.3.2",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "requests-oauthlib==1.3.1",
    "setuptools>=80.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
]

[tool.ruff]
line-length = 120
target-version = "py313"
extend-exclude = ["tests.py"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "*dev_*.py",
]


[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
select = ["E", "F", "I", "W", "C4", "RET", "TID", "PTH", "DTZ", "FBT003", "N", "D"]
ignore = ["RET503", "N802", "RET504", "D104", "D103", "D102", "D101", "D100", "D107", "N818"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]


[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
force-single-line = false
no-sections = false

[tool.ruff.lint.pylint]
max-returns = 5

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tom.settings"
pythonpath = ["."]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"
markers = [
    "unit: Pure unit tests (no DB or network)",
    "integration: Integration tests spanning multiple components",
    "api: REST API endpoint tests",
    "db: Tests that require database access",
    "external: Tests that call external services",
    "astronomical: Tests involving astronomical calculations",
    "security: Security-related tests",
    "slow: Tests that take a long time to run",
]

[tool.pyright]
include = ["."]
exclude = ["**/node_modules", "**/__pycache__", "tests"]
typeCheckingMode = "basic"
pythonVersion = "3.13"
reportMissingTypeStubs = false
